--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -11,6 +11,7 @@ $font-size: 16px
 $font-size-small: 12px
 
 $line: $font-size * 1.5
+$gutter: 10px
 
 $text-color-dark: #333
 $text-color-medium: #666
@@ -20,3 +21,8 @@ $link-color-blue: #00f
 $link-color-red: #f00
 
 @import 'base'
+@import 'grid'
+
+@import 'header'
+@import 'footer'
+@import 'chapter1'
