--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -4,8 +4,16 @@
 $tablet: 500px
 $desktop: 1000px
 
-$font-family-heading: Helvetica, sans-serif
-$font-family-body: Helvetica, sans-serif
+// Available Fonts:
+// font-family: 'Bodoni MT W01';
+// font-family: 'AdobeCaslonW01-Regular';
+// font-family: 'Adobe Caslon W01 It';
+// font-family: 'Adobe Caslon W01 Bd';
+// font-family: 'Adobe Caslon W01 Bd It';
+// font-family: 'BodoniW01-PosterItalic';
+
+$font-family-heading: 'BodoniW01-PosterItalic', serif
+$font-family-body: 'AdobeCaslonW01-Regular', sans-serif
 
 $font-size: 16px
 $font-size-small: 12px
