--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -3,10 +3,10 @@
   position: relative
 
 a
-  color: $link-color-blue
+  color: $link-color
 
   &:hover
-    color: $link-color-red
+    color: $link-color-hover
 
 input
   margin: 0
@@ -17,7 +17,6 @@ html
   font-family: $font-family-body
   font-size: $font-size
   line-height: $line
-  // Prevent abrupt quality changes during transitions.
   -webkit-font-smoothing: antialiased
 
 h1,
@@ -27,7 +26,7 @@ h4,
 h5,
 h6
   font-family: $font-family-heading
-  font-weight: bold
+  font-weight: normal
   line-height: 1
 
 h1
