--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -5,12 +5,13 @@ $tablet: 500px
 $desktop: 1000px
 
 // Available Fonts:
-// font-family: 'Bodoni MT W01';
-// font-family: 'AdobeCaslonW01-Regular';
-// font-family: 'Adobe Caslon W01 It';
-// font-family: 'Adobe Caslon W01 Bd';
-// font-family: 'Adobe Caslon W01 Bd It';
-// font-family: 'BodoniW01-PosterItalic';
+// font-family: 'Bodoni MT W01'
+// font-family: 'AdobeCaslonW01-Regular'
+// font-family: 'Adobe Caslon W01 It'
+// font-family: 'Adobe Caslon W01 Bd'
+// font-family: 'Adobe Caslon W01 Bd It'
+// font-family: 'BodoniW01-PosterItalic'
+// font-family: 'Bodoni W01 Poster'
 
 $font-family-heading: 'BodoniW01-PosterItalic', serif
 $font-family-body: 'AdobeCaslonW01-Regular', sans-serif
@@ -21,12 +22,13 @@ $font-size-small: 12px
 $line: $font-size * 1.5
 $gutter: 10px
 
-$text-color-dark: #333
+$text-color-dark: #383838
 $text-color-medium: #666
 $text-color-light: #aaa
+$text-color-green: #548e85
 
-$link-color-blue: #00f
-$link-color-red: #f00
+$link-color: $text-color-green
+$link-color-hover: $text-color-dark
 
 @import 'base'
 @import 'grid'
