--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 5, sass/_base.sass */
 a {
-  color: blue; }
+  color: #548e85; }
   /* line 8, sass/_base.sass */
   a:hover {
-    color: red; }
+    color: #383838; }
 
 /* line 11, sass/_base.sass */
 input {
@@ -75,13 +75,13 @@ input {
 /* line 14, sass/_base.sass */
 html {
   background: white;
-  color: #333333;
+  color: #383838;
   font-family: "AdobeCaslonW01-Regular", sans-serif;
   font-size: 16px;
   line-height: 24px;
   -webkit-font-smoothing: antialiased; }
 
-/* line 23, sass/_base.sass */
+/* line 22, sass/_base.sass */
 h1,
 h2,
 h3,
@@ -89,39 +89,39 @@ h4,
 h5,
 h6 {
   font-family: "BodoniW01-PosterItalic", serif;
-  font-weight: bold;
+  font-weight: normal;
   line-height: 1; }
 
-/* line 33, sass/_base.sass */
+/* line 32, sass/_base.sass */
 h1 {
   font-size: 48px;
   margin-bottom: 24px; }
 
-/* line 37, sass/_base.sass */
+/* line 36, sass/_base.sass */
 h2 {
   font-size: 30px;
   margin: 24px 0;
   padding: 24px 0 0; }
 
-/* line 42, sass/_base.sass */
+/* line 41, sass/_base.sass */
 h3 {
   font-size: 18px;
   margin: 30px 0 12px; }
 
-/* line 46, sass/_base.sass */
+/* line 45, sass/_base.sass */
 p {
   margin: 24px 0; }
 
-/* line 49, sass/_base.sass */
+/* line 48, sass/_base.sass */
 strong {
   font-weight: bold; }
 
-/* line 52, sass/_base.sass */
+/* line 51, sass/_base.sass */
 em {
   font-style: italic; }
 
 /* line 1, sass/_grid.sass */
-.grid12, .grid8, .grid6, .grid4, .grid3 {
+.whole, .half, .twothirds, .onethird, .threefourths, .onefourth {
   float: left;
   padding: 24px 10px;
   width: 100%; }
@@ -135,35 +135,122 @@ em {
 
 @media (min-width: 1000px) {
   /* line 21, sass/_grid.sass */
-  .grid12 {
+  .whole {
     width: 100%; } }
 
 @media (min-width: 1000px) {
   /* line 24, sass/_grid.sass */
-  .grid8 {
-    width: 66.66667%; } }
+  .half {
+    width: 50%; } }
 
 @media (min-width: 1000px) {
   /* line 27, sass/_grid.sass */
-  .grid6 {
-    width: 50%; } }
+  .twothirds {
+    width: 66.66667%; } }
 
 @media (min-width: 1000px) {
   /* line 30, sass/_grid.sass */
-  .grid4 {
+  .onethird {
     width: 33.33333%; } }
 
-@media (min-width: 500px) {
-  /* line 33, sass/_grid.sass */
-  .grid3 {
-    width: 50%; } }
 @media (min-width: 1000px) {
   /* line 33, sass/_grid.sass */
-  .grid3 {
+  .threefourths {
+    width: 75%; } }
+
+@media (min-width: 500px) {
+  /* line 36, sass/_grid.sass */
+  .onefourth {
+    width: 50%; } }
+@media (min-width: 1000px) {
+  /* line 36, sass/_grid.sass */
+  .onefourth {
     width: 25%; } }
 
-/* line 36, sass/_grid.sass */
-.container {
+/* line 39, sass/_grid.sass */
+.container, section, header {
   margin: 0 auto;
   max-width: 1000px;
   padding: 24px 10px; }
+
+/* line 1, sass/_header.sass */
+header {
+  text-align: center; }
+  /* line 5, sass/_header.sass */
+  header p,
+  header hr,
+  header h1 span,
+  header h1 em {
+    position: relative; }
+  /* line 11, sass/_header.sass */
+  header hr {
+    z-index: 1; }
+  /* line 14, sass/_header.sass */
+  header h1 em {
+    z-index: 2; }
+  /* line 17, sass/_header.sass */
+  header p,
+  header h1 span,
+  header h1 small,
+  header nav {
+    z-index: 3; }
+  /* line 23, sass/_header.sass */
+  header p {
+    text-transform: uppercase;
+    margin: 0 0 30px; }
+    /* line 27, sass/_header.sass */
+    header p:before, header p:after {
+      color: #548e85;
+      content: "★";
+      font-size: 9.6px;
+      padding: 0 6px;
+      vertical-align: 4.8px; }
+  /* line 35, sass/_header.sass */
+  header h1 {
+    font-family: "Bodoni W01 Poster";
+    font-size: 56px;
+    font-weight: normal;
+    line-height: 1;
+    margin: -43.2px 0 6px;
+    text-transform: uppercase;
+    word-spacing: -12px; }
+    /* line 44, sass/_header.sass */
+    header h1 em {
+      background: white;
+      font-family: "BodoniW01-PosterItalic", serif;
+      font-size: 102.4px;
+      font-style: normal;
+      margin: 0;
+      padding: 0 3px; }
+    /* line 52, sass/_header.sass */
+    header h1 small {
+      color: #548e85;
+      font-family: "Adobe Caslon W01 Bd It", serif;
+      font-size: 36px;
+      font-style: normal;
+      padding: 0 2.4px;
+      text-transform: lowercase;
+      vertical-align: 8px; }
+  /* line 61, sass/_header.sass */
+  header nav {
+    overflow: hidden;
+    *zoom: 1;
+    border-top: 1px solid #888888;
+    border-bottom: 1px solid #888888;
+    line-height: 1;
+    padding: 12px 0 9.6px; }
+    /* line 68, sass/_header.sass */
+    header nav li {
+      float: left;
+      letter-spacing: -1px;
+      margin: 0 0.7em;
+      text-transform: uppercase; }
+      /* line 74, sass/_header.sass */
+      header nav li:first-child {
+        margin-left: 0; }
+      /* line 77, sass/_header.sass */
+      header nav li:last-child {
+        margin-right: 0; }
+    /* line 80, sass/_header.sass */
+    header nav a {
+      text-decoration: none; }
