--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,12 @@ input {
   margin: 0; }
 
 /* line 14, sass/_base.sass */
+html,
+body {
+  width: 100%;
+  height: 100%; }
+
+/* line 19, sass/_base.sass */
 html {
   background: white;
   color: #383838;
@@ -81,7 +87,7 @@ html {
   line-height: 24px;
   -webkit-font-smoothing: antialiased; }
 
-/* line 22, sass/_base.sass */
+/* line 27, sass/_base.sass */
 h1,
 h2,
 h3,
@@ -92,83 +98,98 @@ h6 {
   font-weight: normal;
   line-height: 1; }
 
-/* line 32, sass/_base.sass */
+/* line 37, sass/_base.sass */
 h1 {
   font-size: 48px;
   margin-bottom: 24px; }
 
-/* line 36, sass/_base.sass */
+/* line 41, sass/_base.sass */
 h2 {
   font-size: 30px;
   margin: 24px 0;
   padding: 24px 0 0; }
 
-/* line 41, sass/_base.sass */
+/* line 46, sass/_base.sass */
 h3 {
   font-size: 18px;
   margin: 30px 0 12px; }
 
-/* line 45, sass/_base.sass */
+/* line 50, sass/_base.sass */
 p {
   margin: 24px 0; }
 
-/* line 48, sass/_base.sass */
+/* line 53, sass/_base.sass */
 strong {
   font-weight: bold; }
 
-/* line 51, sass/_base.sass */
+/* line 56, sass/_base.sass */
 em {
   font-style: italic; }
 
+/* line 61, sass/_base.sass */
+article {
+  width: 100%; }
+  /* line 64, sass/_base.sass */
+  article section {
+    background: white;
+    width: 100%;
+    z-index: 3; }
+
+/* line 74, sass/_base.sass */
+.fixed, .chapter-1 header {
+  position: fixed;
+  left: 0;
+  top: 0; }
+
+/* line 79, sass/_base.sass */
+.bleed {
+  width: 100%;
+  height: 100%; }
+  /* line 83, sass/_base.sass */
+  .bleed img {
+    width: 100%; }
+
+/* line 86, sass/_base.sass */
+.white_background, .chapter-1 .intro {
+  background: white; }
+
 /* line 1, sass/_grid.sass */
-.whole, .half, .twothirds, .onethird, .threefourths, .onefourth {
+.half, .twothirds, .onethird, .threefourths, .onefourth {
   float: left;
   padding: 24px 10px;
   width: 100%; }
 
-/* line 16, sass/_grid.sass */
-.row {
-  overflow: hidden;
-  *zoom: 1;
-  margin: 24px auto;
-  max-width: 1000px; }
-
 @media (min-width: 1000px) {
-  /* line 21, sass/_grid.sass */
-  .whole {
-    width: 100%; } }
-
-@media (min-width: 1000px) {
-  /* line 24, sass/_grid.sass */
+  /* line 16, sass/_grid.sass */
   .half {
     width: 50%; } }
 
 @media (min-width: 1000px) {
-  /* line 27, sass/_grid.sass */
+  /* line 19, sass/_grid.sass */
   .twothirds {
     width: 66.66667%; } }
 
 @media (min-width: 1000px) {
-  /* line 30, sass/_grid.sass */
+  /* line 22, sass/_grid.sass */
   .onethird {
     width: 33.33333%; } }
 
 @media (min-width: 1000px) {
-  /* line 33, sass/_grid.sass */
+  /* line 25, sass/_grid.sass */
   .threefourths {
     width: 75%; } }
 
 @media (min-width: 500px) {
-  /* line 36, sass/_grid.sass */
+  /* line 28, sass/_grid.sass */
   .onefourth {
     width: 50%; } }
 @media (min-width: 1000px) {
-  /* line 36, sass/_grid.sass */
+  /* line 28, sass/_grid.sass */
   .onefourth {
     width: 25%; } }
 
-/* line 39, sass/_grid.sass */
-.container, section, header {
+/* line 31, sass/_grid.sass */
+.container, article section .contents, header {
   margin: 0 auto;
   max-width: 1000px;
   padding: 24px 10px; }
@@ -176,54 +197,58 @@ em {
 /* line 1, sass/_header.sass */
 header {
   margin: 2em auto;
-  text-align: center; }
-  /* line 6, sass/_header.sass */
+  padding: 0;
+  text-align: center;
+  width: 100%; }
+  /* line 8, sass/_header.sass */
   header p,
   header hr,
   header h1 span,
   header h1 em {
     position: relative; }
-  /* line 12, sass/_header.sass */
+  /* line 14, sass/_header.sass */
   header hr {
     z-index: 1; }
-  /* line 15, sass/_header.sass */
+  /* line 17, sass/_header.sass */
   header h1 em {
     z-index: 2; }
-  /* line 18, sass/_header.sass */
+  /* line 20, sass/_header.sass */
   header p,
   header h1 span,
   header h1 small,
   header nav {
     z-index: 3; }
-  /* line 24, sass/_header.sass */
+  /* line 26, sass/_header.sass */
   header p {
     text-transform: uppercase;
     margin: 0 0 30px; }
-    /* line 28, sass/_header.sass */
+    /* line 30, sass/_header.sass */
     header p:before, header p:after {
       color: #548e85;
       content: "★";
       font-size: 9.6px;
       padding: 0 6px;
       vertical-align: 4.8px; }
-  /* line 36, sass/_header.sass */
+  /* line 38, sass/_header.sass */
+  header hr {
+    display: none; }
+  /* line 41, sass/_header.sass */
   header h1 {
     font-family: "Bodoni W01 Poster";
     font-size: 56px;
     font-weight: normal;
     line-height: 1;
-    margin: -43.2px 0 6px;
+    margin: -0.25em 0 6px;
     text-transform: uppercase;
     word-spacing: -12px; }
-    /* line 45, sass/_header.sass */
+    /* line 50, sass/_header.sass */
     header h1 em {
-      background: white;
       font-family: "BodoniW01-PosterItalic", serif;
       font-size: 102.4px;
       font-style: normal;
       margin: 0;
       padding: 0 3px; }
-    /* line 53, sass/_header.sass */
+    /* line 57, sass/_header.sass */
     header h1 small {
       color: #548e85;
       font-family: "Adobe Caslon W01 Bd It", serif;
@@ -232,26 +257,62 @@ header {
       padding: 0 2.4px;
       text-transform: lowercase;
       vertical-align: 8px; }
-  /* line 62, sass/_header.sass */
+  /* line 67, sass/_header.sass */
+  header.bordered hr {
+    display: block; }
+  /* line 70, sass/_header.sass */
+  header.bordered h1 {
+    margin-top: -43.2px; }
+    /* line 73, sass/_header.sass */
+    header.bordered h1 em {
+      background: white; }
+  /* line 76, sass/_header.sass */
+  header.on_top_of_dark_background, .chapter-1 header {
+    text-shadow: #383838 0 0 25px; }
+    /* line 79, sass/_header.sass */
+    header.on_top_of_dark_background h1, .chapter-1 header h1 {
+      color: white; }
+      /* line 82, sass/_header.sass */
+      header.on_top_of_dark_background h1 small, .chapter-1 header h1 small {
+        color: white; }
+  /* line 85, sass/_header.sass */
   header nav {
     overflow: hidden;
     *zoom: 1;
+    display: none;
     border-top: 1px solid #888888;
     border-bottom: 1px solid #888888;
     line-height: 1;
     padding: 12px 0 9.6px; }
-    /* line 69, sass/_header.sass */
+    /* line 93, sass/_header.sass */
     header nav li {
       float: left;
       letter-spacing: -1px;
       margin: 0 0.7em;
       text-transform: uppercase; }
-      /* line 75, sass/_header.sass */
+      /* line 99, sass/_header.sass */
       header nav li:first-child {
         margin-left: 0; }
-      /* line 78, sass/_header.sass */
+      /* line 102, sass/_header.sass */
       header nav li:last-child {
         margin-right: 0; }
-    /* line 81, sass/_header.sass */
+    /* line 105, sass/_header.sass */
     header nav a {
       text-decoration: none; }
+
+/* line 2, sass/_chapter1.sass */
+.chapter-1 header {
+  z-index: 2; }
+  /* line 8, sass/_chapter1.sass */
+  .chapter-1 header p {
+    text-shadow: none; }
+  /* line 11, sass/_chapter1.sass */
+  .chapter-1 header h1 {
+    margin-top: 4em; }
+/* line 14, sass/_chapter1.sass */
+.chapter-1 .company_photo {
+  z-index: 1; }
+/* line 17, sass/_chapter1.sass */
+.chapter-1 .intro {
+  margin-top: 80%;
+  z-index: 3; }
