Better position the header.

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ article {
     width: 25%; } }
 
 /* line 31, sass/_grid.sass */
-.container, article section .contents, header {
+.container, article section .contents {
   margin: 0 auto;
   max-width: 1000px;
   padding: 24px 10px; }
@@ -200,39 +200,39 @@ header {
   padding: 0;
   text-align: center;
   width: 100%; }
-  /* line 8, sass/_header.sass */
+  /* line 7, sass/_header.sass */
   header p,
   header hr,
   header h1 span,
   header h1 em {
     position: relative; }
-  /* line 14, sass/_header.sass */
+  /* line 13, sass/_header.sass */
   header hr {
     z-index: 1; }
-  /* line 17, sass/_header.sass */
+  /* line 16, sass/_header.sass */
   header h1 em {
     z-index: 2; }
-  /* line 20, sass/_header.sass */
+  /* line 19, sass/_header.sass */
   header p,
   header h1 span,
   header h1 small,
   header nav {
     z-index: 3; }
-  /* line 26, sass/_header.sass */
+  /* line 25, sass/_header.sass */
   header p {
     text-transform: uppercase;
     margin: 0 0 30px; }
-    /* line 30, sass/_header.sass */
+    /* line 29, sass/_header.sass */
     header p:before, header p:after {
       color: #548e85;
       content: "★";
       font-size: 9.6px;
       padding: 0 6px;
       vertical-align: 4.8px; }
-  /* line 38, sass/_header.sass */
+  /* line 37, sass/_header.sass */
   header hr {
     display: none; }
-  /* line 41, sass/_header.sass */
+  /* line 40, sass/_header.sass */
   header h1 {
     font-family: "Bodoni W01 Poster";
     font-size: 56px;
@@ -241,14 +241,14 @@ header {
     margin: -0.25em 0 6px;
     text-transform: uppercase;
     word-spacing: -12px; }
-    /* line 50, sass/_header.sass */
+    /* line 49, sass/_header.sass */
     header h1 em {
       font-family: "BodoniW01-PosterItalic", serif;
       font-size: 102.4px;
       font-style: normal;
       margin: 0;
       padding: 0 3px; }
-    /* line 57, sass/_header.sass */
+    /* line 56, sass/_header.sass */
     header h1 small {
       color: #548e85;
       font-family: "Adobe Caslon W01 Bd It", serif;
@@ -257,25 +257,25 @@ header {
       padding: 0 2.4px;
       text-transform: lowercase;
       vertical-align: 8px; }
-  /* line 67, sass/_header.sass */
+  /* line 66, sass/_header.sass */
   header.bordered hr {
     display: block; }
-  /* line 70, sass/_header.sass */
+  /* line 69, sass/_header.sass */
   header.bordered h1 {
     margin-top: -43.2px; }
-    /* line 73, sass/_header.sass */
+    /* line 72, sass/_header.sass */
     header.bordered h1 em {
       background: white; }
-  /* line 76, sass/_header.sass */
+  /* line 75, sass/_header.sass */
   header.on_top_of_dark_background, .chapter-1 header {
     text-shadow: #383838 0 0 25px; }
-    /* line 79, sass/_header.sass */
+    /* line 78, sass/_header.sass */
     header.on_top_of_dark_background h1, .chapter-1 header h1 {
       color: white; }
-      /* line 82, sass/_header.sass */
+      /* line 81, sass/_header.sass */
       header.on_top_of_dark_background h1 small, .chapter-1 header h1 small {
         color: white; }
-  /* line 85, sass/_header.sass */
+  /* line 84, sass/_header.sass */
   header nav {
     overflow: hidden;
     *zoom: 1;
@@ -284,19 +284,19 @@ header {
     border-bottom: 1px solid #888888;
     line-height: 1;
     padding: 12px 0 9.6px; }
-    /* line 93, sass/_header.sass */
+    /* line 92, sass/_header.sass */
     header nav li {
       float: left;
       letter-spacing: -1px;
       margin: 0 0.7em;
       text-transform: uppercase; }
-      /* line 99, sass/_header.sass */
+      /* line 98, sass/_header.sass */
       header nav li:first-child {
         margin-left: 0; }
-      /* line 102, sass/_header.sass */
+      /* line 101, sass/_header.sass */
       header nav li:last-child {
         margin-right: 0; }
-    /* line 105, sass/_header.sass */
+    /* line 104, sass/_header.sass */
     header nav a {
       text-decoration: none; }
 
