--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -2,7 +2,6 @@
   header
     @extend .on_top_of_dark_background
     @extend .fixed
-
     z-index: 2
 
     p
@@ -10,6 +9,9 @@
 
     h1
       margin-top: 4em
+
+    nav
+      display: none
 
   .company_photo
     z-index: 1
