--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -62,6 +62,29 @@ header
       text-transform: lowercase
       vertical-align: $line/3
 
+  nav
+    @extend .container
+    @include clearfix
+    border-top: 1px solid #888
+    border-bottom: 1px solid #888
+    line-height: 1
+    padding: $line/2 0 $line/2.5
+
+    li
+      float: left
+      letter-spacing: -1px
+      margin: 0 .9em
+      text-transform: uppercase
+
+      &:first-child
+        margin-left: 0
+
+      &:last-child
+        margin-right: 0
+
+    a
+      text-decoration: none
+
   &.bordered
     hr
       display: block
@@ -85,25 +108,5 @@ header
       a
         color: #fff
 
-  nav
-    @extend .container
-    @include clearfix
-    border-top: 1px solid #888
-    border-bottom: 1px solid #888
-    line-height: 1
-    padding: $line/2 0 $line/2.5
-
-    li
-      float: left
-      letter-spacing: -1px
-      margin: 0 .9em
-      text-transform: uppercase
-
-      &:first-child
-        margin-left: 0
-
-      &:last-child
-        margin-right: 0
-
-    a
-      text-decoration: none
+  &.minimized
+    //
