--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -1,5 +1,9 @@
 .chapter-1
+  // header
+  //   @extend .minimized
+
   header
+    @extend .big
     @extend .on_top_of_dark_background
     @extend .fixed
     z-index: 2
@@ -11,7 +15,7 @@
       margin-top: 4em
 
     nav
-      display: none
+
 
   .company_photo
     z-index: 1
