--- a/css/style.css
+++ b/css/style.css
@@ -189,135 +189,156 @@ article {
     width: 25%; } }
 
 /* line 31, sass/_grid.sass */
-.container, article section .contents, header nav {
+.container, article section .contents, header.big nav, .chapter-1 header nav {
   margin: 0 auto;
   max-width: 1000px;
   padding: 24px 10px; }
 
 /* line 1, sass/_header.sass */
 header {
-  margin: 2em auto;
   padding: 0;
   text-align: center;
+  text-transform: uppercase;
   width: 100%; }
-  /* line 7, sass/_header.sass */
-  header p,
-  header hr,
-  header h1 span,
-  header h1 em {
-    position: relative; }
-  /* line 13, sass/_header.sass */
-  header hr {
-    z-index: 1; }
-  /* line 16, sass/_header.sass */
-  header h1 em {
-    z-index: 2; }
-  /* line 19, sass/_header.sass */
-  header p,
-  header h1 span,
-  header h1 small,
-  header nav {
-    z-index: 3; }
-  /* line 25, sass/_header.sass */
-  header p {
-    text-transform: uppercase;
-    margin: 0 0 30px; }
-    /* line 29, sass/_header.sass */
-    header p:before, header p:after {
-      color: #548e85;
-      content: "★";
-      font-size: 9.6px;
-      padding: 0 6px;
-      vertical-align: 4.8px; }
-  /* line 37, sass/_header.sass */
-  header hr {
-    display: none; }
-  /* line 40, sass/_header.sass */
+  /* line 9, sass/_header.sass */
   header h1 {
     font-family: "Bodoni W01 Poster";
-    font-size: 57.6px;
     font-weight: normal;
-    line-height: 1;
-    margin: -0.25em 0 6px;
-    text-transform: uppercase;
-    word-spacing: -12px; }
-    /* line 49, sass/_header.sass */
-    header h1 em {
-      font-family: "BodoniW01-PosterItalic", serif;
-      font-size: 104px;
-      font-style: normal;
-      margin: 0;
-      padding: 0 3px; }
-    /* line 56, sass/_header.sass */
-    header h1 small {
-      color: #548e85;
-      font-family: "Adobe Caslon W01 Bd It", serif;
-      font-size: 36.8px;
-      font-style: normal;
-      padding: 0 2.4px;
-      text-transform: lowercase;
-      vertical-align: 8px; }
-  /* line 65, sass/_header.sass */
-  header nav {
-    overflow: hidden;
-    *zoom: 1;
-    border-top: 1px solid #888888;
-    border-bottom: 1px solid #888888;
-    line-height: 1;
-    padding: 12px 0 9.6px; }
-    /* line 73, sass/_header.sass */
-    header nav li {
-      float: left;
-      letter-spacing: -1px;
-      margin: 0 0.9em;
-      text-transform: uppercase; }
-      /* line 79, sass/_header.sass */
-      header nav li:first-child {
-        margin-left: 0; }
-      /* line 82, sass/_header.sass */
-      header nav li:last-child {
-        margin-right: 0; }
-    /* line 85, sass/_header.sass */
-    header nav a {
+    line-height: 1; }
+  /* line 18, sass/_header.sass */
+  header nav li {
+    float: left;
+    letter-spacing: -1px; }
+    /* line 22, sass/_header.sass */
+    header nav li a {
       text-decoration: none; }
-  /* line 89, sass/_header.sass */
-  header.bordered hr {
-    display: block; }
-  /* line 92, sass/_header.sass */
-  header.bordered h1 {
-    margin-top: -43.2px; }
-    /* line 95, sass/_header.sass */
-    header.bordered h1 em {
-      background: white; }
-  /* line 98, sass/_header.sass */
-  header.on_top_of_dark_background, .chapter-1 header {
-    text-shadow: #383838 0 0 25px; }
-    /* line 101, sass/_header.sass */
-    header.on_top_of_dark_background h1, .chapter-1 header h1 {
-      color: white; }
+  /* line 25, sass/_header.sass */
+  header.small {
+    background: white;
+    height: 100px;
+    z-index: 99; }
+    /* line 30, sass/_header.sass */
+    header.small p {
+      background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
+      background-size: contain;
+      float: left;
+      width: 30px;
+      height: 30px;
+      text-indent: -10000px; }
+  /* line 40, sass/_header.sass */
+  header.big, .chapter-1 header {
+    margin: 2em auto; }
+    /* line 43, sass/_header.sass */
+    header.big p, .chapter-1 header p,
+    header.big hr,
+    .chapter-1 header hr,
+    header.big h1 span,
+    .chapter-1 header h1 span,
+    header.big h1 em,
+    .chapter-1 header h1 em {
+      position: relative; }
+    /* line 49, sass/_header.sass */
+    header.big hr, .chapter-1 header hr {
+      z-index: 1; }
+    /* line 52, sass/_header.sass */
+    header.big h1 em, .chapter-1 header h1 em {
+      z-index: 2; }
+    /* line 55, sass/_header.sass */
+    header.big p, .chapter-1 header p,
+    header.big h1 span,
+    .chapter-1 header h1 span,
+    header.big h1 small,
+    .chapter-1 header h1 small,
+    header.big nav,
+    .chapter-1 header nav {
+      z-index: 3; }
+    /* line 61, sass/_header.sass */
+    header.big p, .chapter-1 header p {
+      margin: 0 0 30px; }
+      /* line 64, sass/_header.sass */
+      header.big p:before, .chapter-1 header p:before, header.big p:after, .chapter-1 header p:after {
+        color: #548e85;
+        content: "★";
+        font-size: 9.6px;
+        padding: 0 6px;
+        vertical-align: 4.8px; }
+    /* line 72, sass/_header.sass */
+    header.big hr, .chapter-1 header hr {
+      display: none; }
+    /* line 75, sass/_header.sass */
+    header.big h1, .chapter-1 header h1 {
+      font-size: 57.6px;
+      margin: -0.25em 0 6px;
+      word-spacing: -12px; }
+      /* line 80, sass/_header.sass */
+      header.big h1 em, .chapter-1 header h1 em {
+        font-family: "BodoniW01-PosterItalic", serif;
+        font-size: 104px;
+        font-style: normal;
+        margin: 0;
+        padding: 0 3px; }
+      /* line 87, sass/_header.sass */
+      header.big h1 small, .chapter-1 header h1 small {
+        color: #548e85;
+        font-family: "Adobe Caslon W01 Bd It", serif;
+        font-size: 36.8px;
+        font-style: normal;
+        padding: 0 2.4px;
+        text-transform: lowercase;
+        vertical-align: 8px; }
+    /* line 96, sass/_header.sass */
+    header.big nav, .chapter-1 header nav {
+      overflow: hidden;
+      *zoom: 1;
+      border-top: 1px solid #888888;
+      border-bottom: 1px solid #888888;
+      line-height: 1;
+      padding: 12px 0 9.6px; }
       /* line 104, sass/_header.sass */
-      header.on_top_of_dark_background h1 small, .chapter-1 header h1 small {
+      header.big nav li, .chapter-1 header nav li {
+        letter-spacing: -1px;
+        margin: 0 0.9em; }
+        /* line 108, sass/_header.sass */
+        header.big nav li:first-child, .chapter-1 header nav li:first-child {
+          margin-left: 0; }
+        /* line 111, sass/_header.sass */
+        header.big nav li:last-child, .chapter-1 header nav li:last-child {
+          margin-right: 0; }
+    /* line 115, sass/_header.sass */
+    header.big.bordered hr, .chapter-1 header.bordered hr {
+      display: block; }
+    /* line 118, sass/_header.sass */
+    header.big.bordered h1, .chapter-1 header.bordered h1 {
+      margin-top: -43.2px; }
+      /* line 121, sass/_header.sass */
+      header.big.bordered h1 em, .chapter-1 header.bordered h1 em {
+        background: white; }
+    /* line 124, sass/_header.sass */
+    header.big.on_top_of_dark_background, .chapter-1 header {
+      text-shadow: #383838 0 0 25px; }
+      /* line 127, sass/_header.sass */
+      header.big.on_top_of_dark_background h1, .chapter-1 header h1 {
         color: white; }
-    /* line 108, sass/_header.sass */
-    header.on_top_of_dark_background nav a, .chapter-1 header nav a {
-      color: white; }
+        /* line 130, sass/_header.sass */
+        header.big.on_top_of_dark_background h1 small, .chapter-1 header h1 small {
+          color: white; }
+      /* line 134, sass/_header.sass */
+      header.big.on_top_of_dark_background nav a, .chapter-1 header nav a {
+        color: white; }
 
-/* line 2, sass/_chapter1.sass */
+/* line 5, sass/_chapter1.sass */
 .chapter-1 header {
   z-index: 2; }
-  /* line 7, sass/_chapter1.sass */
+  /* line 11, sass/_chapter1.sass */
   .chapter-1 header p {
     text-shadow: none; }
-  /* line 10, sass/_chapter1.sass */
+  /* line 14, sass/_chapter1.sass */
   .chapter-1 header h1 {
     margin-top: 4em; }
-  /* line 13, sass/_chapter1.sass */
-  .chapter-1 header nav {
-    display: none; }
-/* line 16, sass/_chapter1.sass */
+/* line 20, sass/_chapter1.sass */
 .chapter-1 .company_photo {
   z-index: 1; }
-/* line 19, sass/_chapter1.sass */
+/* line 23, sass/_chapter1.sass */
 .chapter-1 .intro {
   margin-top: 80%;
   z-index: 3; }
