--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -1,21 +1,21 @@
 .chapter-1
-  // header
-  //   @extend .minimized
-
   header
-    @extend .big
-    @extend .on_top_of_dark_background
-    @extend .fixed
-    z-index: 2
+    @extend .small
 
-    p
-      @include text-shadow(none)
+  // header
+  //   @extend .big
+  //   @extend .on_top_of_dark_background
+  //   @extend .fixed
+  //   z-index: 2
 
-    h1
-      margin-top: 4em
+  //   p
+  //     @include text-shadow(none)
 
-    nav
+  //   h1
+  //     margin-top: 4em
 
+  //   nav
+  //     display: none
 
   .company_photo
     z-index: 1
