--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -4,27 +4,29 @@ header
   text-transform: uppercase
   width: 100%
 
+  .contents
+    padding: 0
+
   p
+    margin: 0
 
   h1
     font-family: 'Bodoni W01 Poster'
     font-weight: normal
     line-height: 1
+    margin: 0
 
-  nav
-    ul
-      
+  li
+    float: left
+    letter-spacing: -1px
 
-    li
-      float: left
-      letter-spacing: -1px
-
-      a
-        text-decoration: none
+    a
+      text-decoration: none
 
   &.small
     background: #fff
-    height: 100px
+    height: 60px
+    overflow: hidden
     z-index: 99
 
     p
@@ -35,7 +37,12 @@ header
       height: 30px
       text-indent: -10000px
 
+    hr
+      display: none
+
     h1
+      font-size: 18px
+      margin: 0
 
   &.big
     margin: 2em auto
