--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -1,18 +1,18 @@
 .chapter-1
-  header
-    @extend .big
-    @extend .on_top_of_dark_background
-    @extend .fixed
-    z-index: 2
+  header.site_header
+    &.big
+      @extend .on_top_of_dark_background
+      @extend .fixed
+      z-index: 2
 
-    p
-      @include text-shadow(none)
+      p
+        @include text-shadow(none)
 
-    h1
-      margin-top: 4em
+      h1
+        margin-top: 4em
 
-    nav
-      display: none
+      nav
+        display: none
 
   .company_photo
     z-index: 1
