--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,38 +19,38 @@ time, mark, audio, video {
   font-size: 100%;
   vertical-align: baseline; }
 
-/* line 22, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1; }
 
-/* line 24, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 26, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 28, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 30, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none; }
-  /* line 103, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+  /* line 103, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
-/* line 32, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
-/* line 116, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
@@ -137,7 +137,7 @@ section {
   z-index: 3; }
 
 /* line 74, sass/_base.sass */
-.fixed, .chapter-1 header {
+.fixed, .chapter-1 header.site_header.big {
   position: fixed;
   left: 0;
   top: 0; }
@@ -190,146 +190,148 @@ section {
     width: 25%; } }
 
 /* line 31, sass/_grid.sass */
-.container, .contents, header.big nav, .chapter-1 header nav {
+.container, .contents, header.site_header.big nav {
   margin: 0 auto;
   max-width: 1000px;
   padding: 24px 10px; }
 
 /* line 1, sass/_header.sass */
-header {
+header.site_header {
   padding: 0;
   text-transform: uppercase;
-  width: 100%; }
-  /* line 6, sass/_header.sass */
-  header .contents {
+  width: 100%;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+  /* line 7, sass/_header.sass */
+  header.site_header .contents {
     padding: 0; }
-  /* line 9, sass/_header.sass */
-  header p {
+  /* line 10, sass/_header.sass */
+  header.site_header p {
     margin: 0; }
-  /* line 12, sass/_header.sass */
-  header h1 {
+  /* line 13, sass/_header.sass */
+  header.site_header h1 {
     font-family: "Bodoni W01 Poster";
     font-weight: normal;
     line-height: 1;
     margin: 0; }
-  /* line 18, sass/_header.sass */
-  header li {
+  /* line 19, sass/_header.sass */
+  header.site_header li {
     float: left; }
-    /* line 21, sass/_header.sass */
-    header li:first-child {
+    /* line 22, sass/_header.sass */
+    header.site_header li:first-child {
       margin-left: 0; }
-    /* line 24, sass/_header.sass */
-    header li:last-child {
+    /* line 25, sass/_header.sass */
+    header.site_header li:last-child {
       margin-right: 0; }
-    /* line 27, sass/_header.sass */
-    header li a {
+    /* line 28, sass/_header.sass */
+    header.site_header li a {
       text-decoration: none; }
-  /* line 30, sass/_header.sass */
-  header.small {
+  /* line 31, sass/_header.sass */
+  header.site_header.small {
     background: rgba(0, 0, 0, 0.75);
     height: 60px;
     overflow: hidden;
+    margin-top: -60px;
     padding: 0.5em 0;
     z-index: 99; }
-    /* line 37, sass/_header.sass */
-    header.small p {
-      background: url('../img/pbs-light_background.svg?1369273560') no-repeat left top;
+    /* line 39, sass/_header.sass */
+    header.site_header.small.shown {
+      margin-top: 0; }
+    /* line 42, sass/_header.sass */
+    header.site_header.small p {
+      background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
       background-size: contain;
       float: left;
       margin-right: 1em;
       width: 35px;
       height: 35px;
       text-indent: -10000px; }
-    /* line 46, sass/_header.sass */
-    header.small hr {
+    /* line 51, sass/_header.sass */
+    header.site_header.small hr {
       display: none; }
-    /* line 49, sass/_header.sass */
-    header.small h1 {
+    /* line 54, sass/_header.sass */
+    header.site_header.small h1 {
       color: #aaaaaa;
       font-size: 12.8px; }
-      /* line 53, sass/_header.sass */
-      header.small h1 em {
+      /* line 58, sass/_header.sass */
+      header.site_header.small h1 em {
         font-family: "BodoniW01-PosterItalic", serif;
         font-size: 16px;
         font-style: normal; }
-      /* line 58, sass/_header.sass */
-      header.small h1 small {
+      /* line 63, sass/_header.sass */
+      header.site_header.small h1 small {
         color: #aaaaaa;
         font-family: "Adobe Caslon W01 Bd It", serif;
         font-size: 14.4px;
         font-style: normal;
         padding: 0 2.4px;
         text-transform: lowercase; }
-    /* line 66, sass/_header.sass */
-    header.small nav {
+    /* line 71, sass/_header.sass */
+    header.site_header.small nav {
       font-family: Helvetica, sans-serif;
       font-size: 12px;
       margin-left: -0.5em; }
-      /* line 71, sass/_header.sass */
-      header.small nav li {
+      /* line 76, sass/_header.sass */
+      header.site_header.small nav li {
         margin: 0 0.1em; }
-        /* line 74, sass/_header.sass */
-        header.small nav li a {
+        /* line 79, sass/_header.sass */
+        header.site_header.small nav li a {
           color: #aaaaaa;
           padding: 0 0.3em; }
-        /* line 78, sass/_header.sass */
-        header.small nav li a:hover {
+        /* line 83, sass/_header.sass */
+        header.site_header.small nav li a:hover {
           color: #666666; }
-  /* line 81, sass/_header.sass */
-  header.big, .chapter-1 header {
+  /* line 86, sass/_header.sass */
+  header.site_header.big {
     margin: 2em auto;
     text-align: center; }
-    /* line 85, sass/_header.sass */
-    header.big p, .chapter-1 header p,
-    header.big hr,
-    .chapter-1 header hr,
-    header.big h1 span,
-    .chapter-1 header h1 span,
-    header.big h1 em,
-    .chapter-1 header h1 em {
+    /* line 90, sass/_header.sass */
+    header.site_header.big p,
+    header.site_header.big hr,
+    header.site_header.big h1 span,
+    header.site_header.big h1 em {
       position: relative; }
-    /* line 91, sass/_header.sass */
-    header.big hr, .chapter-1 header hr {
+    /* line 96, sass/_header.sass */
+    header.site_header.big hr {
       z-index: 1; }
-    /* line 94, sass/_header.sass */
-    header.big h1 em, .chapter-1 header h1 em {
+    /* line 99, sass/_header.sass */
+    header.site_header.big h1 em {
       z-index: 2; }
-    /* line 97, sass/_header.sass */
-    header.big p, .chapter-1 header p,
-    header.big h1 span,
-    .chapter-1 header h1 span,
-    header.big h1 small,
-    .chapter-1 header h1 small,
-    header.big nav,
-    .chapter-1 header nav {
+    /* line 102, sass/_header.sass */
+    header.site_header.big p,
+    header.site_header.big h1 span,
+    header.site_header.big h1 small,
+    header.site_header.big nav {
       z-index: 3; }
-    /* line 103, sass/_header.sass */
-    header.big p, .chapter-1 header p {
+    /* line 108, sass/_header.sass */
+    header.site_header.big p {
       margin: 0 0 30px; }
-      /* line 106, sass/_header.sass */
-      header.big p:before, .chapter-1 header p:before, header.big p:after, .chapter-1 header p:after {
+      /* line 111, sass/_header.sass */
+      header.site_header.big p:before, header.site_header.big p:after {
         color: #548e85;
         content: "★";
         font-size: 9.6px;
         padding: 0 6px;
         vertical-align: 4.8px; }
-    /* line 114, sass/_header.sass */
-    header.big hr, .chapter-1 header hr {
+    /* line 119, sass/_header.sass */
+    header.site_header.big hr {
       display: none; }
-    /* line 117, sass/_header.sass */
-    header.big h1, .chapter-1 header h1 {
+    /* line 122, sass/_header.sass */
+    header.site_header.big h1 {
       font-size: 57.6px;
       margin: -0.25em 0 6px;
       word-spacing: -12px; }
-      /* line 122, sass/_header.sass */
-      header.big h1 em, .chapter-1 header h1 em {
+      /* line 127, sass/_header.sass */
+      header.site_header.big h1 em {
         font-family: "BodoniW01-PosterItalic", serif;
         font-size: 104px;
         font-style: normal;
         margin: 0;
         padding: 0 3px; }
-      /* line 129, sass/_header.sass */
-      header.big h1 small, .chapter-1 header h1 small {
+      /* line 134, sass/_header.sass */
+      header.site_header.big h1 small {
         color: #548e85;
         font-family: "Adobe Caslon W01 Bd It", serif;
         font-size: 36.8px;
@@ -337,38 +339,38 @@ header {
         padding: 0 2.4px;
         text-transform: lowercase;
         vertical-align: 8px; }
-    /* line 138, sass/_header.sass */
-    header.big nav, .chapter-1 header nav {
+    /* line 143, sass/_header.sass */
+    header.site_header.big nav {
       overflow: hidden;
       *zoom: 1;
       border-top: 1px solid #888888;
       border-bottom: 1px solid #888888;
       line-height: 1;
       padding: 12px 0 9.6px; }
-      /* line 146, sass/_header.sass */
-      header.big nav li, .chapter-1 header nav li {
+      /* line 151, sass/_header.sass */
+      header.site_header.big nav li {
         letter-spacing: -1px;
         margin: 0 0.9em; }
-    /* line 151, sass/_header.sass */
-    header.big.bordered hr, .chapter-1 header.bordered hr {
+    /* line 156, sass/_header.sass */
+    header.site_header.big.bordered hr {
       display: block; }
-    /* line 154, sass/_header.sass */
-    header.big.bordered h1, .chapter-1 header.bordered h1 {
+    /* line 159, sass/_header.sass */
+    header.site_header.big.bordered h1 {
       margin-top: -43.2px; }
-      /* line 157, sass/_header.sass */
-      header.big.bordered h1 em, .chapter-1 header.bordered h1 em {
+      /* line 162, sass/_header.sass */
+      header.site_header.big.bordered h1 em {
         background: white; }
-    /* line 160, sass/_header.sass */
-    header.big.on_top_of_dark_background, .chapter-1 header {
+    /* line 165, sass/_header.sass */
+    header.site_header.big.on_top_of_dark_background, .chapter-1 header.site_header.big {
       text-shadow: #383838 0 0 25px; }
-      /* line 163, sass/_header.sass */
-      header.big.on_top_of_dark_background h1, .chapter-1 header h1 {
+      /* line 168, sass/_header.sass */
+      header.site_header.big.on_top_of_dark_background h1, .chapter-1 header.site_header.big h1 {
         color: white; }
-        /* line 166, sass/_header.sass */
-        header.big.on_top_of_dark_background h1 small, .chapter-1 header h1 small {
+        /* line 171, sass/_header.sass */
+        header.site_header.big.on_top_of_dark_background h1 small, .chapter-1 header.site_header.big h1 small {
           color: white; }
-      /* line 170, sass/_header.sass */
-      header.big.on_top_of_dark_background nav a, .chapter-1 header nav a {
+      /* line 175, sass/_header.sass */
+      header.site_header.big.on_top_of_dark_background nav a, .chapter-1 header.site_header.big nav a {
         color: white; }
 
 /* line 1, sass/_footer.sass */
@@ -378,17 +380,17 @@ footer {
   footer a {
     color: white; }
 
-/* line 2, sass/_chapter1.sass */
-.chapter-1 header {
+/* line 3, sass/_chapter1.sass */
+.chapter-1 header.site_header.big {
   z-index: 2; }
   /* line 8, sass/_chapter1.sass */
-  .chapter-1 header p {
+  .chapter-1 header.site_header.big p {
     text-shadow: none; }
   /* line 11, sass/_chapter1.sass */
-  .chapter-1 header h1 {
+  .chapter-1 header.site_header.big h1 {
     margin-top: 4em; }
   /* line 14, sass/_chapter1.sass */
-  .chapter-1 header nav {
+  .chapter-1 header.site_header.big nav {
     display: none; }
 /* line 17, sass/_chapter1.sass */
 .chapter-1 .company_photo {
