Fixed PHP and header and footer navigation.

--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -1,5 +1,20 @@
 footer
   background: $dark
 
+  nav
+    ul
+      overflow: hidden
+
+    li  
+      display: block
+      float: left
+      padding: 2em 0
+      width: 50%
+
+      a
+
+        strong
+          display: block
+
   a
     color: #fff
